bump the zindex to prevent being hidden by Modal

--- a/packages/components/src/Menu/Menu.css
+++ b/packages/components/src/Menu/Menu.css
@@ -7,7 +7,7 @@
 }
 
 .popperContainer {
-  z-index: var(--elevation-menu);
+  z-index: var(--elevation-modal);
 }
 
 .shadowRef {
